HVAC Backup 2/objects/Callout_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>RequestBody</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLParameters__c</fullName>
        <label>URLParameters</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Callout Configuration</label>
    <pluralLabel>Callout Configurations</pluralLabel>
</CustomObject>